# plotalot

./: .gitignore  CMakeLists.txt  Config.cpp  Config.hpp  a.out  compile.sh  global_config.hpp  job.out  jobMan.cpp  jobMan.hpp  logParser.hpp  main.cpp  plotJob.cpp  plotJob.hpp  plotalotv2_c.tar  projectLog.md  test.cong
headers/: JobMan.hpp  PlotJob.hpp  SaveStats.hpp  global_config.hpp  headers.hpp  logParser.hpp
src/: Config.cpp  JobMan.cpp  LogParser.cpp  PlotJob.cpp  SaveStats.cpp
test/: config.txt  main.cpp  plotOutputter.sh
